2003-08-08  Sven Herzberg  <herzi@gnome-de.org>

	* data/qalculate.glade: includes the complete main window now
	* src/callbacks.cc: removed the GtkHSeparator (the're not used anymore)
	* src/interface.cc: moved the whole main window to the glade file

2003-08-07  Sven Herzberg  <herzi@gnome-de.org>

	* data/qalculate.glade: added the expression menu and the result menu
	* po/de.po: updated translation
	* src/callbacks.cc: glade updates
	* src/interface.cc: glade updates

2003-08-07  Sven Herzberg  <herzi@gnome-de.org>

	* src/interface.cc,
	* src/interface.h,
	* src/main.cc: as the return value of create_window was only used to
	display the widget, made create_window a void method and display
	widget from there

2003-08-07  Sven Herzberg  <herzi@gnome-de.org>

	* configure.in: added libglade dependency
	* data/Makefile.am: added glade file
	* data/qalculate.glade: user interface definition
	* src/callbacks.cc: removed the extern GtkWidget *window
	* src/interface.cc: started migration to glade
	* src/interface.h: started migration to glade
	* src/main.cc: started migration to glade

2003-08-07  Sven Herzberg  <herzi@gnome-de.org>

	* .cvsignore: cvs update has less warnings now
	* configure.in: added de to ALL_LINGUAS
	* data/qalculate.desktop.in: fixed the starter
	* po/.cvsignore: cvs update has less warnings now
	* po/de.po: updated german translation

2003-08-07  Sven Herzberg  <herzi@gnome-de.org>

	* data/Makefile.am: added fixes for kde pre-3.2 (aka stable)

2003-08-07  Sven Herzberg  <herzi@gnome-de.org>

	* .cvsignore: cvs update has less warnings now
	* configure.in: some beautification (will fix -Wall later this day)
	* data/.cvsignore: cvs update has less warnings now
	* data/Makefile.am: added desktop file
	* data/qalculate.desktop.in: desktop file template
	* po/.cvsignore: cvs update has less warnings now
	* po/POTFILES.in: added data/qalculate.desktop
	* po/de.po: added german translation

2003-08-07  Sven Herzberg  <herzi@gnome-de.org>
